k8s-demo/on-demand.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ondemand
  namespace: default
  labels:
    app: traefik-ondemand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ondemand
  template:
    metadata:
      labels:
        app: traefik-ondemand
    spec:
      serviceAccountName: traefik-ondemand
      serviceAccount: traefik-ondemand
      containers:
      - name: traefik-ondemand
        image: ghcr.io/acouvreur/traefik-ondemand-service:1
        args: 
        - --swarmMode=false
        - --kubernetesMode=true
        ports:
        - containerPort: 10000
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 50m
            memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ondemand
  namespace: default
spec:
  selector:
    app: traefik-ondemand
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
